# reqtool

./: .gitignore  AGENTS.md  README.md  pyproject.toml
requirements/: REQ-000-bootstrap.md  REQ-001-new-requirement.md  REQ-002-list-requirements.md  REQ-003-init-reqtool-workflow.md  REQ-004-show-requirement.md
src/reqtool/: __main__.py  registry.py
tests/: test_req_001_new_command.py  test_req_002_list_command.py  test_req_003_init_command.py  test_req_004_show_command.py
